perm turing for mac