@@ -89,7 +89,7 @@
 			</activation>
 			<properties>
 				<swtbot.url>http://download.eclipse.org/technology/swtbot/releases/2.3.0/</swtbot.url>
-				<ui.test.vmargs>-XstartOnFirstThread -Xmx512m</ui.test.vmargs>
+				<ui.test.vmargs>-XstartOnFirstThread -Xmx1024m -XX:MaxPermSize=512m</ui.test.vmargs>
 			</properties>
 		</profile>
 	</profiles>
